[package]
name = "http-status-responder"
version = "0.1.0"
edition = "2021"
publish = false
description = "Microservice which responds with 419 I'm a Teapot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
